# VideoQuest

./: .dockerignore  DEMO_SCRIPT.md  Dockerfile.backend  HANDOFF.md  README.md  SHORT_README.md  TECHNICAL_WRITEUP.md  docker-compose.yml  livekit.yaml  main.py  pyproject.toml
AISkills/: Claude.md  InitialArchitecture.md  Project_Context.md
migrations/: env.py
migrations/versions/: 42967f29e711_create_chat_messages_table.py  7305e176186f_initial_schema.py
src/: main.py
src/api/: dependencies.py  routes.py  schemas.py
src/core/: auth.py  config.py  exceptions.py  identity.py  logging.py
src/domain/: events.py  models.py
src/infrastructure/: __init__.py  database.py  models.py  redis.py  repositories.py  websocket_manager.py
src/services/: chat_service.py  lifecycle_monitor.py  livekit_service.py  participant_service.py  session_service.py
tests/: conftest.py  test_api.py  test_chat.py  test_livekit_endpoint.py  test_participant_api.py  test_participant_domain.py  test_participant_lifecycle.py  test_participant_service.py  test_realtime.py  test_session_domain.py  test_session_service.py  test_video_escalation_realtime.py  test_websocket_endpoint.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/src/app/: page.tsx
web/src/app/agent/: page.tsx
web/src/app/agent/login/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/join/[inviteToken]/: page.tsx
web/src/app/session/[sessionId]/: page.tsx
web/src/components/: ChatPanel.tsx  MediaRoom.tsx
web/src/lib/: api-client.ts  types.ts
