[project]
name = "videoquest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "websockets>=14.0",
    "livekit>=1.0.0",
]
